+Fix: delete notification dependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "_from": "@imagina/qhelper@>=0.0.15",
-  "_id": "@imagina/qhelper@0.0.15",
+  "_from": "@imagina/qhelper@>=0.0.16",
+  "_id": "@imagina/qhelper@0.0.16",
   "_inBundle": false,
   "_integrity": "sha512-8cez/9L2b61q0aLK12hTTeQ5eyj5Xqz9tFFEmoMr/CkI8tDxwns8F/S7/zgQoHyhruz1NgcavzdKQMt6tg74kw==",
   "_location": "/@imagina/qhelper",
@@ -8,21 +8,21 @@
   "_requested": {
     "type": "range",
     "registry": true,
-    "raw": "@imagina/qhelper@>=0.0.15",
+    "raw": "@imagina/qhelper@>=0.0.16",
     "name": "@imagina/qhelper",
     "escapedName": "@imagina%2fqhelper",
     "scope": "@imagina",
-    "rawSpec": ">=0.0.15",
+    "rawSpec": ">=0.0.16",
     "saveSpec": null,
-    "fetchSpec": ">=0.0.15"
+    "fetchSpec": ">=0.0.16"
   },
   "_requiredBy": [
     "/@imagina/qcrud",
     "/@imagina/quser"
   ],
-  "_resolved": "https://registry.npmjs.org/@imagina/qhelper/-/qhelper-0.0.15.tgz",
+  "_resolved": "https://registry.npmjs.org/@imagina/qhelper/-/qhelper-0.0.16.tgz",
   "_shasum": "e6d00a72ae45ebca52be2923cc2986e75a721c88",
-  "_spec": "@imagina/qhelper@>=0.0.15",
+  "_spec": "@imagina/qhelper@>=0.0.16",
   "_where": "D:\\Imagina\\html\\copifam_app\\node_modules\\@imagina\\qcrud",
   "author": {
     "name": "http://imaginacolombia.com/"
@@ -34,9 +34,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "localforage": "^1.7.2",
-    "vuelidate": "^0.7.4",
-    "laravel-echo": "^1.4.0",
-    "pusher-js": "^4.3.1"
+    "vuelidate": "^0.7.4"
   },
   "deprecated": false,
   "description": "Quasar Framework, AsgardCMS, Laravel Passport Authentication, Module with CRUD for users, and Profile Admin",
@@ -57,5 +55,5 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "version": "0.0.15"
+  "version": "0.0.16"
 }
