--- a/package.json
+++ b/package.json
@@ -1,29 +1,33 @@
 {
-  "_from": "@imagina/qhelper@>=0.0.4",
-  "_id": "@imagina/qhelper@0.0.5",
+  "_from": "@imagina/qhelper@0.0.19",
+  "_id": "@imagina/qhelper@0.0.19",
   "_inBundle": false,
-  "_integrity": "sha512-8cez/9L2b61q0aLK12hTTeQ5eyj5Xqz9tFFEmoMr/CkI8tDxwns8F/S7/zgQoHyhruz1NgcavzdKQMt6tg74kw==",
+  "_integrity": "sha512-wm2DYqoS+k00ic1T9wpP//owL0nPgaNCslX+0vU0MZJgsJAvl/CYb3kuItO/+bT4wrOAzvwOuR+3m2s3gVjhyQ==",
   "_location": "/@imagina/qhelper",
   "_phantomChildren": {},
   "_requested": {
-    "type": "range",
+    "type": "version",
     "registry": true,
-    "raw": "@imagina/qhelper@>=0.0.4",
+    "raw": "@imagina/qhelper@0.0.19",
     "name": "@imagina/qhelper",
     "escapedName": "@imagina%2fqhelper",
     "scope": "@imagina",
-    "rawSpec": ">=0.0.4",
+    "rawSpec": "0.0.18",
     "saveSpec": null,
-    "fetchSpec": ">=0.0.4"
+    "fetchSpec": "0.0.18"
   },
   "_requiredBy": [
+    "#USER",
+    "/",
     "/@imagina/qcrud",
+    "/@imagina/qnotification",
+    "/@imagina/qoffline",
     "/@imagina/quser"
   ],
-  "_resolved": "https://registry.npmjs.org/@imagina/qhelper/-/qhelper-0.0.5.tgz",
-  "_shasum": "e6d00a72ae45ebca52be2923cc2986e75a721c88",
-  "_spec": "@imagina/qhelper@>=0.0.4",
-  "_where": "D:\\Imagina\\html\\copifam_app\\node_modules\\@imagina\\qcrud",
+  "_resolved": "https://registry.npmjs.org/@imagina/qhelper/-/qhelper-0.0.19.tgz",
+  "_shasum": "b86ff24848d4b6ecb47b485f8632dcd8c1c3f662",
+  "_spec": "@imagina/qhelper@0.0.19",
+  "_where": "D:\\Imagina\\html\\Applications\\fhia_app",
   "author": {
     "name": "http://imaginacolombia.com/"
   },
@@ -55,5 +59,5 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "version": "0.0.7"
+  "version": "0.0.19"
 }
