--- a/package.json
+++ b/package.json
@@ -1,12 +1,6 @@
 {
-  "_args": [
-    [
-      "@imagina/qhelper@0.0.20",
-      "D:\\projects\\Applications\\imagina_app"
-    ]
-  ],
-  "_from": "@imagina/qhelper@0.0.20",
-  "_id": "@imagina/qhelper@0.0.20",
+  "_from": "@imagina/qhelper@0.0.19",
+  "_id": "@imagina/qhelper@0.0.19",
   "_inBundle": false,
   "_integrity": "sha512-2EPXHoPD5EbgLq5eI+ZgBxXGfZaduadwqFlwJq8uyrtGrt8Cp8TkbHYOxgkpv4Pw3iDDnNCLk8114lChwxZr/g==",
   "_location": "/@imagina/qhelper",
@@ -14,25 +8,26 @@
   "_requested": {
     "type": "version",
     "registry": true,
-    "raw": "@imagina/qhelper@0.0.20",
+    "raw": "@imagina/qhelper@0.0.19",
     "name": "@imagina/qhelper",
     "escapedName": "@imagina%2fqhelper",
     "scope": "@imagina",
-    "rawSpec": "0.0.20",
+    "rawSpec": "0.0.19",
     "saveSpec": null,
-    "fetchSpec": "0.0.20"
+    "fetchSpec": "0.0.19"
   },
   "_requiredBy": [
+    "#USER",
     "/",
     "/@imagina/qcrud",
     "/@imagina/qnotification",
     "/@imagina/qoffline",
     "/@imagina/quser"
   ],
-  "_resolved": "https://registry.npmjs.org/@imagina/qhelper/-/qhelper-0.0.20.tgz",
-  "_shasum": "b86ff24848d4b6ecb47b485f8632dcd8c1c3f662",
-  "_spec": "0.0.20",
-  "_where": "D:\\projects\\Applications\\imagina_app",
+  "_resolved": "https://registry.npmjs.org/@imagina/qhelper/-/qhelper-0.0.19.tgz",
+  "_shasum": "1c956bfc8d9d5207d9044f03164057ec7f3db581",
+  "_spec": "@imagina/qhelper@0.0.19",
+  "_where": "C:\\imagina\\html\\fhaproducts2018_frontend",
   "author": {
     "name": "http://imaginacolombia.com/"
   },
@@ -64,5 +59,5 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "version": "0.0.20"
+  "version": "0.0.19"
 }
