--- a/package.json
+++ b/package.json
@@ -1,33 +1,37 @@
 {
-  "_from": "@imagina/qhelper@0.0.23",
-  "_id": "@imagina/qhelper@0.0.23",
+  "_args": [
+    [
+      "@imagina/qhelper@0.0.25",
+      "D:\\imagina\\projects\\baseQuasarFrontend\\front-end"
+    ]
+  ],
+  "_from": "@imagina/qhelper@0.0.25",
+  "_id": "@imagina/qhelper@0.0.25",
   "_inBundle": false,
-  "_integrity": "sha512-2EPXHoPD5EbgLq5eI+ZgBxXGfZaduadwqFlwJq8uyrtGrt8Cp8TkbHYOxgkpv4Pw3iDDnNCLk8114lChwxZr/g==",
+  "_integrity": "sha512-mx8oZN11aDbuHDBtZa6Vvlc+3haiOu3TVOWk6TBX4ZsV+Zi87Cr55afVQai10YvqPJuI8m9QXWmh6kHDUBznvA==",
   "_location": "/@imagina/qhelper",
   "_phantomChildren": {},
   "_requested": {
     "type": "version",
     "registry": true,
-    "raw": "@imagina/qhelper@0.0.23",
+    "raw": "@imagina/qhelper@0.0.25",
     "name": "@imagina/qhelper",
     "escapedName": "@imagina%2fqhelper",
     "scope": "@imagina",
-    "rawSpec": "0.0.21",
+    "rawSpec": "0.0.25",
     "saveSpec": null,
-    "fetchSpec": "0.0.22"
+    "fetchSpec": "0.0.25"
   },
   "_requiredBy": [
-    "#USER",
     "/",
     "/@imagina/qcrud",
-    "/@imagina/qnotification",
-    "/@imagina/qoffline",
+    "/@imagina/qcrud/@imagina/quser",
     "/@imagina/quser"
   ],
-  "_resolved": "https://registry.npmjs.org/@imagina/qhelper/-/qhelper-0.0.23.tgz",
+  "_resolved": "https://registry.npmjs.org/@imagina/qhelper/-/qhelper-0.0.25.tgz",
   "_shasum": "1c956bfc8d9d5207d9044f03164057ec7f3db581",
-  "_spec": "@imagina/qhelper@0.0.23",
-  "_where": "C:\\imagina\\html\\fhaproducts2018_frontend",
+  "_spec": "0.0.25",
+  "_where": "D:\\imagina\\projects\\baseQuasarFrontend\\front-end",
   "author": {
     "name": "http://imaginacolombia.com/"
   },
@@ -59,5 +63,5 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "version": "0.0.23"
+  "version": "0.0.25"
 }
