--- a/package.json
+++ b/package.json
@@ -1,37 +1,34 @@
 {
   "_args": [
     [
-      "@imagina/qhelper@0.0.25",
+      "@imagina/qhelper@0.0.26",
       "D:\\imagina\\projects\\baseQuasarFrontend\\front-end"
     ]
   ],
-  "_from": "@imagina/qhelper@0.0.25",
-  "_id": "@imagina/qhelper@0.0.25",
+  "_from": "@imagina/qhelper@^0.0.26",
+  "_id": "@imagina/qhelper@0.0.26",
   "_inBundle": false,
-  "_integrity": "sha512-mx8oZN11aDbuHDBtZa6Vvlc+3haiOu3TVOWk6TBX4ZsV+Zi87Cr55afVQai10YvqPJuI8m9QXWmh6kHDUBznvA==",
+  "_integrity": "sha512-4ag3CAst5IJ/gp92Cx7/chl1MCyYxgOiX3u8mWchbA7I6LMVxTCOpcwSyUMbE1vjN4bcDD8EqAN7oWv79BXeBQ==",
   "_location": "/@imagina/qhelper",
   "_phantomChildren": {},
   "_requested": {
-    "type": "version",
+    "type": "range",
     "registry": true,
-    "raw": "@imagina/qhelper@0.0.25",
+    "raw": "@imagina/qhelper@^0.0.26",
     "name": "@imagina/qhelper",
     "escapedName": "@imagina%2fqhelper",
     "scope": "@imagina",
-    "rawSpec": "0.0.25",
+    "rawSpec": "^0.0.26",
     "saveSpec": null,
-    "fetchSpec": "0.0.25"
+    "fetchSpec": "^0.0.26"
   },
   "_requiredBy": [
-    "/",
-    "/@imagina/qcrud",
-    "/@imagina/qcrud/@imagina/quser",
-    "/@imagina/quser"
+    "/"
   ],
-  "_resolved": "https://registry.npmjs.org/@imagina/qhelper/-/qhelper-0.0.25.tgz",
-  "_shasum": "1c956bfc8d9d5207d9044f03164057ec7f3db581",
-  "_spec": "0.0.25",
-  "_where": "D:\\imagina\\projects\\baseQuasarFrontend\\front-end",
+  "_resolved": "https://registry.npmjs.org/@imagina/qhelper/-/qhelper-0.0.26.tgz",
+  "_shasum": "561e2827565c304943d7725e818751d9efb8b4d0",
+  "_spec": "@imagina/qhelper@^0.0.26",
+  "_where": "D:\\imagina\\projects\\baseQuasar\\back-end",
   "author": {
     "name": "http://imaginacolombia.com/"
   },
@@ -63,5 +60,5 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "version": "0.0.25"
+  "version": "0.0.26"
 }
