--- a/package.json
+++ b/package.json
@@ -1,49 +1,17 @@
 {
-  "_args": [
-    [
-      "@imagina/qhelper@0.0.27",
-      "D:\\imagina\\projects\\baseQuasarFrontend\\front-end"
-    ]
-  ],
-  "_from": "@imagina/qhelper@^0.0.27",
-  "_id": "@imagina/qhelper@0.0.27",
-  "_inBundle": false,
-  "_integrity": "sha512-H5OMEAB9kfUFQ2tSRlVElvkiaE/+l4OUBsfhBjGGD/cv9UjQmPT5Y3onaRfKH/s3wELnDg8tJeZLqPGU5XrHSQ==",
-  "_location": "/@imagina/qhelper",
-  "_phantomChildren": {},
-  "_requested": {
-    "type": "range",
-    "registry": true,
-    "raw": "@imagina/qhelper@^0.0.27",
-    "name": "@imagina/qhelper",
-    "escapedName": "@imagina%2fqhelper",
-    "scope": "@imagina",
-    "rawSpec": "^0.0.27",
-    "saveSpec": null,
-    "fetchSpec": "^0.0.27"
-  },
-  "_requiredBy": [
-    "/"
-  ],
-  "_resolved": "https://registry.npmjs.org/@imagina/qhelper/-/qhelper-0.0.27.tgz",
-  "_shasum": "93a9d06324acf60f03d488544aeb1e87f76d49ab",
-  "_spec": "@imagina/qhelper@^0.0.27",
-  "_where": "D:\\imagina\\projects\\backedpizza\\front-end",
-  "author": {
-    "name": "http://imaginacolombia.com/"
-  },
+  "author": "http://imaginacolombia.com",
   "bugs": {
     "url": "https://github.com/imagina/qhelper/issues"
   },
   "bundleDependencies": false,
   "deprecated": false,
-  "description": "Quasar Framework, AsgardCMS, Laravel Passport Authentication, Module with CRUD for users, and Profile Admin",
+  "description": "Package to use Helpers in Base Quasar 1.0.0",
   "homepage": "https://github.com/imagina/qhelper#readme",
   "keywords": [
     "quasar",
     "laravel",
     "asgardcms",
-    "passport"
+    "qhelper"
   ],
   "license": "ISC",
   "main": "index.js",
@@ -55,5 +23,5 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "version": "0.0.27"
+  "version": "1.0.0"
 }
