--- a/package.json
+++ b/package.json
@@ -1,5 +1,32 @@
 {
-  "author": "http://imaginacolombia.com",
+  "_from": "@imagina/qhelper@^1.0.0",
+  "_id": "@imagina/qhelper@1.0.0",
+  "_inBundle": false,
+  "_integrity": "sha512-zVkM7JZI7Tdac7i07by9o3UD/5ckwNN1ib69TSYlyztv0LjbSnYKMtpNJ02UCnJfvStZODOfVHOUS6q6Fe/t6g==",
+  "_location": "/@imagina/qhelper",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "range",
+    "registry": true,
+    "raw": "@imagina/qhelper@^1.0.0",
+    "name": "@imagina/qhelper",
+    "escapedName": "@imagina%2fqhelper",
+    "scope": "@imagina",
+    "rawSpec": "^1.0.0",
+    "saveSpec": null,
+    "fetchSpec": "^1.0.0"
+  },
+  "_requiredBy": [
+    "/",
+    "/@imagina/qnotification"
+  ],
+  "_resolved": "https://registry.npmjs.org/@imagina/qhelper/-/qhelper-1.0.0.tgz",
+  "_shasum": "d04c93462d3fee0661b9c149633cb98bd234c692",
+  "_spec": "@imagina/qhelper@^1.0.0",
+  "_where": "D:\\imagina\\projects\\base-quasar\\front-end-v1",
+  "author": {
+    "name": "http://imaginacolombia.com"
+  },
   "bugs": {
     "url": "https://github.com/imagina/qhelper/issues"
   },
